--- a/templates/home.html
+++ b/templates/home.html
@@ -37,8 +37,8 @@
     <div class="menu">
         <button onclick="location.href='/api/new-user'">Registrar una tarjeta de crédito</button>
         <button onclick="location.href='/new_purchase'">Simular una compra</button>
-        <button onclick="location.href='link_ahorro_programado.html'">Ahorro programado sugerido</button>
-        <button onclick="location.href='link_registro_compra.html'">Registrar compra</button>
+        <button onclick="location.href='/saving'">Ahorro programado sugerido</button>
+        <button onclick="location.href='/df'">Registrar compra</button>
         <button onclick="location.href='link_programacion_pagos.html'">Programación de pagos</button>
     </div>
 </body>
