--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
         <button onclick="location.href='/new_purchase'">Simular una compra</button>
         <button onclick="location.href='/saving'">Ahorro programado sugerido</button>
         <button onclick="location.href='/df'">Registrar compra</button>
-        <button onclick="location.href='link_programacion_pagos.html'">Programación de pagos</button>
+        <button onclick="location.href='/suma'">Programación de pagos</button>
     </div>
 </body>
 </html>
