--- a/templates/delete_1.html
+++ b/templates/delete_1.html
@@ -34,20 +34,22 @@
 </head>
 
 <body>
-    <h1>Simulacion de compra </h1>
+    <h1>Eliminación de la tarjeta existosa </h1>
     <table>
         <tr>
             <th>Type</th>
             <th>Value</th>
         </tr>
         <tr>
-            <td>Monthly Payment</td>
-            <td>{{monthly}}</td>
+            <td>cedula</td>
+            <td>{{usuario_tarjeta.cedula}}</td>
         </tr>
+
         <tr>
-            <td>Amount</td>
-            <td>{{total_interest}}</td>
+            <td>Numero de tarjeta</td>
+            <td>{{usuario_tarjeta.numero}}</td>
         </tr>
+        
     </table>
 </body>
 
