--- a/templates/home.html
+++ b/templates/home.html
@@ -40,6 +40,7 @@
         <button onclick="location.href='/saving'">Ahorro programado sugerido</button>
         <button onclick="location.href='/df'">Registrar compra</button>
         <button onclick="location.href='/suma'">Programación de pagos</button>
+        <button onclick="location.href='/delete'">Borrar usuario</button>
     </div>
 </body>
 </html>
